# ArcadeGame

./: CMakeLists.txt  arcade-game-clown-hunt.pck
Assets/: booth.glb
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  RetroArcade.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  retro_arcade.vcxproj  retro_arcade.vcxproj.filters  scores.csv
build-win/retro_arcade.dir/Debug/: retro_arcade.exe.recipe  retro_arcade.ilk
build-win/retro_arcade.dir/Debug/retro_arcade.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-win/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.write.1.tlog
build-win/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-win/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: Camera.cpp  Camera.h  GLBLoader.cpp  GLBLoader.h  Game.cpp  Game.h  GameContext.h  Leaderboard.cpp  Leaderboard.h  LightGun.cpp  LightGun.h  MeshLoader.cpp  MeshLoader.h  Scene.h  main.cpp
src/scenes/: EndGameScene.cpp  EndGameScene.h  GameScene.cpp  GameScene.h  LeaderboardScene.cpp  LeaderboardScene.h  TitleScene.cpp  TitleScene.h
